other-cel/disallow-all-secrets/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: no-secrets
policies:
- ../disallow-all-secrets.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: no-secrets
  resources:
  - default/secret-env-pod
  - default/secret-ref-pod
  - default/secret-vol-pod
  result: fail
  rule: secrets-not-from-env-envFrom-and-volumes
- kind: Pod
  policy: no-secrets
  resources:
  - default/good-pod
  result: pass
  rule: secrets-not-from-env-envFrom-and-volumes
